2011-11-29  6.7.3-10 Cristy  <quetzlzacatenango@image...>
  * Delay reading TIFF EXIF properties to prevent premature exit.
  * Remove duplicates from the configuration file search path under Windows.

2011-11-27  6.7.3-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-9, SVN revision 6092

2011-11-27  6.7.3-9 Cristy  <quetzlzacatenango@image...>
  * Upgrade libtool / ltdl to version 2.4.7.

2011-11-25  6.7.3-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-8, SVN revision 6084

2011-11-20  6.7.3-8 Cristy  <quetzlzacatenango@image...>
  * The exif:ExposureBiasValue property is a signed value.
  * Prevent buffer underflow for 1-bit PSD images.
  * Don't include alpha channel when computing range unless image->matte is
    set.
  * Set FILETYPE_REDUCEDIMAGE tag on pyramidal TIFF images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19892).
  * Correct image geometry for Postscript for hi-res bounding box (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19807).

2010-11-19  6.7.3-8 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug with scaling Q16 background to PNG sub-8-bit bKGD and
    again disabled PNG_USE_CLONE in coders/png.c.

2011-11-18  6.7.3-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-7, SVN revision 6024

2011-11-18  6.7.3-7 Cristy  <quetzlzacatenango@image...>
  * Ensure embedded XML resource file is null terminated (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19856).

2011-11-17  6.7.3-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Added a -define filter:alpha to contol the 'alpha value' of the
    Kaiser Windowing filter.  Default value is 6.5

2010-11-15  6.7.3-7 Glenn Randers-Pehrson <glennrp@image...>
  * Reverted the change of 6.6.6-7 that creates an image clone for use
    by the PNG encoder.  This was not useful and was somewhat wasteful.
  * After finding out that writing the bKGD chunk in sub-8-bit PNG files,